Test Org - Speridian/src/objects/Ba_UW_Form_Request__c.object
<CustomObject>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <displayFormat>FR-{000000}</displayFormat>
        <label>Sequence Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ba_ParentGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>UW Form Requests</relationshipLabel>
        <relationshipName>UW_Form_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_Parent_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>UW Form Request</relationshipLabel>
        <relationshipName>UW_Form_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_SequenceNumber__c</fullName>
        <displayFormat>FR-{000000}</displayFormat>
        <label>Sequence Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ba_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>UW Form Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>UW Form Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UW Form Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>